@@ -19,38 +19,49 @@
 **
 *************************************************************************/
 
-#include <QtGui/QFrame>
-#include <QtGui/QLabel>
+#include <QtCore/QFile>
+#include <QtCore/QLocale>
+#include <QtCore/QString>
+#include <QtCore/QUrl>
 #include <QtGui/QLayout>
-#include <QtGui/QScrollArea>
+#include <QtWebKit/QWebView>
 
-#include "Misc/RasterizeImageResource.h"
 #include "Misc/SettingsStore.h"
 #include "ResourceObjects/ImageResource.h"
 #include "Tabs/ImageTab.h"
+
+const QString IMAGE_HTML_BASE =
+        "<html>"
+        "<head>"
+        "<style type=\"text/css\">"
+        "img { display: block; margin-left: auto; margin-right: auto; border-style: solid; border-width: 1px; }"
+        "hr { width: 75%; }"
+        "div { text-align: center; }"
+        "</style>"
+        "<body>"
+        "<p><img src=\"%1\" /></p>"
+        "<hr />"
+        "<div>%2x%3px | %4 Kb | %5</div>"
+        "</body>"
+        "</html>";
 
 ImageTab::ImageTab( ImageResource& resource, QWidget *parent )
     :
     ContentTab( resource, parent ),
     m_ImageResource( resource ),
-    m_ImageLabel( *new QLabel( this ) ),
-    m_ScrollArea( *new QScrollArea( this ) )
+    m_WebView(*new QWebView(this))
 {
-    // There are two pairs of parentheses: one calls the constructor,
-    // the other calls operator()
-    QPixmap pixmap = RasterizeImageResource()( m_ImageResource, m_CurrentZoomFactor );
+    QImage img(resource.GetFullPath());
+    QString path = resource.GetFullPath();
+    double ffsize = QFile(path).size() / 1024.0;
+    QString fsize = QLocale().toString(ffsize, 'f', 2);
 
-    m_ImageLabel.setPixmap( pixmap );
-    m_ImageLabel.resize( pixmap.size() );
-    m_ImageLabel.setFrameStyle( QFrame::Plain | QFrame::StyledPanel );
-    m_ImageLabel.setStyleSheet( "border: 1px solid rgb(210, 210, 210)" );
+    QString html = IMAGE_HTML_BASE.arg(path).arg(img.width()).arg(img.height()).arg(fsize).arg(img.allGray() ? "BW" : "Color");
+    m_WebView.setHtml(html, QUrl::fromLocalFile(path));
+
+    m_WebView.setContextMenuPolicy(Qt::NoContextMenu);
     
-    m_ScrollArea.setStyleSheet( "QScrollArea { background: white }" );
-    m_ScrollArea.setFrameStyle( QFrame::NoFrame );
-    m_ScrollArea.setAlignment( Qt::AlignCenter );
-    m_ScrollArea.setWidget( &m_ImageLabel );
-    
-    m_Layout.addWidget( &m_ScrollArea );
+    m_Layout.addWidget( &m_WebView);
 
     // Set the Zoom factor but be sure no signals are set because of this.
     SettingsStore settings;
@@ -60,8 +71,7 @@ ImageTab::ImageTab( ImageResource& resource, QWidget *parent )
 
 float ImageTab::GetZoomFactor() const
 {
-    SettingsStore settings;
-    return settings.zoomImage();
+    return m_CurrentZoomFactor;
 }
 
 void ImageTab::SetZoomFactor( float new_zoom_factor )
@@ -78,21 +88,17 @@ void ImageTab::SetZoomFactor( float new_zoom_factor )
 
 void ImageTab::UpdateDisplay()
 {
-    // Update zoom.
     SettingsStore settings;
     float stored_factor = settings.zoomImage();
     if ( stored_factor != m_CurrentZoomFactor )
     {
         m_CurrentZoomFactor = stored_factor;
         Zoom();
-        //emit ZoomFactorChanged( m_CurrentZoomFactor );
     }
 }
 
 
 void ImageTab::Zoom()
 {
-    QPixmap pixmap = RasterizeImageResource()( m_ImageResource, m_CurrentZoomFactor );
-    m_ImageLabel.setPixmap( pixmap );
-    m_ImageLabel.resize( pixmap.size() );
+    m_WebView.setZoomFactor(m_CurrentZoomFactor);
 }
